syntax = "proto3";

package media.v1;

// MediaService defines the gRPC service for media operations.
service MediaService {
  // rpc for getting image URL with file key
  rpc GetImageUrl(FileKey) returns (FileUrl) {}

  // rpc for uploading avatar file
  rpc UploadAvatar(UploadAvatarRequest) returns (FileUrl) {}
  
  // rpc for deleting avatar file
  rpc DeleteAvatar(FileKey) returns (StatusResponse) {}
}

// FileKey represents the request message containing the file key.
message FileKey {
  string file_key = 1;
}

// UploadAvatarRequest represents the request message for uploading an avatar.
message UploadAvatarRequest {
  string id = 1;
  bytes buffer = 2;
  string field_name = 3;
  string original_name = 4;
  string mime_type = 5;
  int64 size = 6;
}

// FileUrl represents the response message after uploading an avatar.
message FileUrl {
  string file_url = 1;
}

// declaration of Id message
message Id {
  string id = 1;
}

// Message representing a status response
message StatusResponse {
  bool success = 1;
  string message = 2;
}

// Command to generate TypeScript code with NestJS options
// protoc -I ./proto ./proto/media.proto --ts_proto_out=./src/generated-types --ts_proto_opt=nestJs=true